fix: z-index arrow

--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -76,6 +76,7 @@
                 animation: 2s linear 1s infinite running arrow;
                 height: 48px;
                 width: 48px;
+                z-index: 1;
             }
         }
 
@@ -142,6 +143,7 @@
                 animation: 2s linear 1s infinite running arrow;
                 height: 48px;
                 width: 48px;
+                z-index: 1;
             }
         }
 
