--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -11,6 +11,8 @@
 
         position: fixed;
 
+        z-index: 9;
+
         .logo_container {
 
             height: 100%;
